name:
  biocad-test
version:
  0.1
build-type:
  Simple
cabal-version:
  >=1.24

library
  hs-source-dirs:
    library
  exposed-modules:
    Biocad.Test.Data
    Biocad.Test.BoltAction
  other-modules:
    Biocad.Test.Prelude
    Biocad.Test.Encoder
    Biocad.Test.Decoder
  build-depends:
    rerebase,
    hasbolt,
    neat-interpolation,
    data-default
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples, DuplicateRecordFields, OverloadedLists
  default-language:
    Haskell2010
    
test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples, DuplicateRecordFields, OverloadedLists
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    rerebase,
    optparse-applicative-simple,
    data-default,
    hasbolt,
    biocad-test, 
    HUnit
